# Plaid-Takehome-Gitwrapper

./: README.md
gitwrap/: pyproject.toml  setup.cfg
gitwrap/src/gitwrap/: __init__.py  git_utils.py  gitwrap.py  models.py  yaml_utils.py
gitwrap/src/gitwrapper/: gitwrap.py
gitwrap/tests/: gitutils_tests.py  gitwrap_tests.py
src/gitwrapper/: gitwrap.py
