[metadata]
name = gitwrap
version = 0.1.0
description = CLI to manage Git repos
author = Khoi Nguyen

[options]
package_dir =
    = src
packages = find:
install_requires =
    typer[all]
    GitPython
    pyyaml
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gitwrap = gitwrap.gitwrap:app